--- a/source/index.html
+++ b/source/index.html
@@ -76,7 +76,7 @@
     <!-- <p class="lead mb-0"> -->
 
     <div class="container">
-        <div class="row pt-3" id="head">
+        <div class="row pt-2 my-4" id="head">
             <div class="col-lg-8 col-xl-9">
                 <header class="header">
                     <h1 class="display-4 d-none d-lg-block">Willkommen</h1>
@@ -85,109 +85,116 @@
             </div>
         </div>
         <div class="row" id="body">
-            <div class="col-lg-8 col-xl-9" role="main">
-                <div class="card-deck">
-                    <div class="card text-dark bg-transparent border-0" id="card-1">
-                        <div class="card-title bg-transparent text-center" id="top-1">
-
-                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-1" aria-expanded="true" aria-controls="politik-1">
-                                <h5>Der Raum
-                                </h5>
-                            </button>
-
-                        </div>
-                        <div id="politik-1" class="collapse" aria-labelledby="top-1" data-parent="accordion">
-                            <div class="card-body bg-transparent">
-                                Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich damit, diskriminiert
-                                zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren. Es ist für uns eine
-                                politische Entscheidung Cis-Männer nicht ins f*c einzuladen. Cis-Männer sind Männer, die
-                                sich nicht als trans* verstehen. Wenn du dich als Cis-Mann identifizierst, verlasse den Raum
-                                bitte unaufgefordert!
-                            </div>
-                        </div>
-                        <div class="card-body">
-
-                        </div>
-                    </div>
-
-                    <div class="card text-dark bg-transparent border-0" id="card-2">
-                        <div class="card-title bg-transparent text-center" id="top-2">
-
-                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-2" aria-expanded="true" aria-controls="politik-2">
-                                <h5>Der Raum
-                                </h5>
-                            </button>
-
-                        </div>
-                        <div id="politik-2" class="collapse" aria-labelledby="top-2" data-parent="accordion">
-                            <div class="card-body bg-transparent">
-                                Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich damit, diskriminiert
-                                zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren. Es ist für uns eine
-                                politische Entscheidung Cis-Männer nicht ins f*c einzuladen. Cis-Männer sind Männer, die
-                                sich nicht als trans* verstehen. Wenn du dich als Cis-Mann identifizierst, verlasse den Raum
-                                bitte unaufgefordert!
-                            </div>
-                        </div>
-                        <div class="card-body">
-
+            <div class="col-md-8 col-lg-6 col-xl-7" role="main">
+                <ul class="nav nav-tabs justify-content-lg-between justify-content-center font-weight-bold font" id="HomeTabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="1-tab" data-toggle="tab" href="#politik-1" role="tab" aria-controls="politik-1" aria-selected="true">Der Raum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="2-tab" data-toggle="tab" href="#politik-2" role="tab" aria-controls="politik-2" aria-selected="false">Einladungspolitik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="3-tab" data-toggle="tab" href="#politik-3" role="tab" aria-controls="politik-3" aria-selected="false">Wie du kein TODESSER bist</a>
+                    </li>
+                </ul>
+                <div class="tab-content bg-transparent" id="myTabContent">
+                    <div class="tab-pane fade show active" id="politik-1" role="tabpanel" aria-labelledby="1-tab">
+                        <div class="card-body bg-transparent">
+                            <p>Der regelmäßigen Barbetrieb wird meist von Leuten aus dem flinte Kollektiv gemacht.
+                            </p>
+                            <p>Neben diesen wird der Raum von verschiedenen queeren und/oder feministischen Gruppen genutzt.
+                                Das Kollektiv trifft sich zweimal im Monat zu Plena um organisatorische und inhaltliche Fragen
+                                zu klären. Jeden 1. Donnerstag im Monat um 18.00 Uhr findet das Orga-Plenum statt. Dazu sind
+                                alle Personen, die sich in der Einladungspolitik wiederfinden herzlich eingeladen, ob du
+                                dich danach weiter im Kollektiv einbringen willst oder nicht.
+                            </p>
+                            <p>Falls du einen Raum für deine Gruppe oder als Einzelperson außerhalb der Baröffnungszeiten brauchst,
+                                kannst du dich bei uns melden. </p>
+                            <p>Über die
+                                <a href="kontakt.html">Eulenpost</a> kannst du jederzeit Kontakt mit uns aufnehmen.
+                            </p>
+                            <p>In der flinte gibt es keinen Konsumzwang. Wer hierher kommt, muss nichts von der Bar konsumieren
+                                und kann gerne auch Mitgebrachtes trinken und essen. Für Getränke gibt es Spendenvorschläge.
+                                Dennoch entscheidest du selbst, ob und wieviel du für Getränk von der Bar spenden willst
+                                oder kannst.</p>
+                            <p>Leider ist der Raum für Rolli_benutzer_innen nicht barrierefrei. Für die hohe Türschwelle gibt
+                                es eine Rampe, die bei Bedarf hinausgetragen wird. Neben der Eingangstür befindet sich eine
+                                Glocke. Das Klo ist nicht mit einem Rollstuhl zugänglich. Im nahen 25hours Hotel in der Lerchenfelderstraße,
+                                gibt es aber ein barrierefreies Klo das benutzt werden kann.
+                            </p>
                         </div>
                     </div>
-
-                    <div class="card text-light bg-transparent border-0" id="card-3">
-                        <div class="card-title bg-transparent text-center" id="top-3">
-                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-3" aria-expanded="true" aria-controls="politik-3">
-                                <h5>Noch was
-                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
-                                </h5>
-                            </button>
-                        </div>
-                        <div id="politik-3" class="collapse" aria-labelledby="top-3" data-parent="accordion">
-                            <div class="card-body bg-transparent">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nemo obcaecati quas necessitatibus vel, perferendis mollitia
-                                maxime molestias exercitationem asperiores ex nam commodi recusandae quidem minus quis dolorem
-                                voluptatum similique nobis eveniet consequatur facere sed corporis pariatur. Commodi, deserunt
-                                non.
-                            </div>
+                    <div class="tab-pane fade" id="politik-2" role="tabpanel" aria-labelledby="2-tab">
+                        <div class="card-body ">
+                            <p>Bei den verwendeten Begriffen und unserer Einladungspolitik geht es uns um die Anerkennung von
+                                Menschen. Viele Menschen müssen sich alltäglich gegen Zuschreibungen wehren, davon wollen
+                                wir in der flinte möglichst wenig haben.</p>
+                            <p>Die flinte wird immer noch oft als Frauen*café bezeichnet. Mit der offiziellen Namensänderung
+                                hoffen wir weiter Abstand von der Vorstellung zu nehmen, alle Personen im Raum seien Frauen
+                                oder könnten so bezeichnet werden. Das ist falsch. Die Einladungspolitik ist genauso vielfältig
+                                wie die Menschen die den Raum besuchen und nutzen.</p>
+                            <p>Deshalb sehen wir unsere Einladungspolitik auch mehr als einen Versuch und kein abgeschlossenes
+                                Idealkonzept. Sowohl die Kommunikation als auch die Umsetzung ist voller Widersprüche. Wie
+                                wir Menschen sehen und sie einzuordnen haben wir über eine lang Zeit gelernt und perfektioniert.
+                                Erlerntes abzulegen ist schwer. Menschen können aber nicht von Außen definiert werden.</p>
+                            <p style="font-weight: bold">Deswegen möchten wir nicht, dass einzelne Personen an der Tür der flinte auf ihre Identität angesprochen
+                                werden oder sie aus dem Raum verwiesen werden.</p>
+                            <p>Das Ansprechen von einzelnen Personen, die “nicht ins Bild passen”, kann ausschließend und verletzend
+                                sein. Außerdem würde eine solche Praxis den strukturellen Ausschluss von Inter* und Trans*personen
+                                verfestigen. Genau das wollen wir nicht.</p>
+                            <p>Wir wollen auch nicht, dass Leuten an der Tür gesagt wird, dass die flinte ein FINT- Raum ist.
+                                Mit Plakaten, Türschildern und ähnlichem versuchen wir deutlich zu machen, dass die flinte
+                                ein Raum für Frauen, Inter-, Non-Binary und Transpersonen ist und überlassen es den Menschen
+                                selbst, ob sie sich darin wiederfinden. Die flinte ist stark genug um auch einen versehentlich
+                                hier gelandeten dyacis Mann, eine zeitlang im Raum zu haben. Wir wollen versuchen verschiedene
+                                Lebensrealitäten zu verstehen und daraus einen respektvollen Umgang miteinander entwickeln</p>
                         </div>
                     </div>
-
-                    <div class="car text darg bg transparent border-0 p-2" id="card-4">
-                        <div class="card-header bg-secondary text-center" id="top-4">
-
-                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="politik-4" aria-expanded="true" aria-controls="politik-4">
-                                <h5>Noch mehr
-                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
-                                </h5>
-                            </button>
-                        </div>
-                        <div id="politik-4" class="collapse" aria-labelledby="top-4" data-parent="accordion">
-                            <div class="card-body bg-transparent">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officiis possimus veniam aut blanditiis ducimus eius expedita
-                                et repellat quis nemo ut quidem pariatur, eum nulla tenetur exercitationem praesentium molestiae
-                                temporibus omnis rerum a. Expedita necessitatibus reprehenderit deleniti minus rem.
-                            </div>
+                    <div class="tab-pane fade" id="politik-3" role="tabpanel" aria-labelledby="3-tab">
+                        <div class="card-body bg-transparent">
+                            <p>Alle, die hier sind, gestalten den Raum mit. Respektvolles Verhalten ist eine wichtige Basis
+                                für den Raum.
+                            </p>
+                            <p>Glaub nicht, dass du eine Person kennst, aufgrund dessen, wie sie redet, aussieht oder du sie
+                                wahrnimmst. Menschen verwenden unterschiedliche Selbstbezeichnungen. Personen zu fragen,
+                                ob sie als “er”, “sie” oder mit einem anderen Pronomen angesprochen werden wollen, ist respektvoll.
+                                Fremdzuschreibungen können verletzend sein. Manchmal ist es besser, erst mal zuzuhören oder
+                                die Person selbst zu fragen.
+                            </p>
+                            <p>Die Leute hinter der Bar sind als Ansprechpersonen da. Wenn sich jemand dir gegenüber grenzüberschreitend,
+                                verletzend oder unangenehm verhält, kannst du dir Unterstützung von ihnen holen. Greif ein
+                                oder sag bitte bescheid, wenn du mitbekommst, dass sich jemand gegenüber jemand anderem so
+                                verhält.
+                            </p>
+                            <p class="lead">Still not LOVEing</p>
+                            <p>
+                                <ul style="list-style-type: circle" class="text-uppercase">
+                                    <li>Rassismus</li>
+                                    <li>Transfeindlichkeit</li>
+                                    <li>ANTISEMITISMUS</li>
+                                    <li>ANTIROMAISMUS</li>
+                                    <li>(CIS-)SEXISMUS</li>
+                                    <li>MISOGYNIE</li>
+                                    <li>HOMOFEINDLICHKEIT</li>
+                                    <li>ABLEISMUS</li>
+                                    <li>BIFEINDLICHKEIT</li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="col-lg-4 col-xl-3 d-none d-lg-block" role="side">
 
-                <div class="fb-page mb-3" data-href="https://www.facebook.com/fc.feminista/" data-tabs="timeline, events" data-small-header="true"
-                    data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
-                    <blockquote cite="https://www.facebook.com/fc.feminista/" class="fb-xfbml-parse-ignore">
-                        <a href="https://www.facebook.com/fc.feminista/">Fc Feminista</a>
-                    </blockquote>
-                </div>
-
-                <a class="text-right">
+            <div class="col-md-4 col-lg-3 col-xl-3">
+                <a id="QuickFacts" class="text-right">
                     <p class="lead">FLinté Wien </p>
                     <address>Lange Gasse 11 1080 Wien</address>
                     <p>
                         <strong>Öffnungszeiten</strong>
                     </p>
                     <p>Do & Fr: 19-24 Uhr</p>
-                    <p>Frauen*, Lesben*, Trans* und Intersex* Personen welcome!
+                    <p>Frauen, Inter-, Trans- und Non-Binary Personen willkommen.
                         <br>
                         <br>
                         <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
@@ -202,10 +209,20 @@
                     </p>
                 </a>
             </div>
-        </div>
+            <div class="col-lg-3 col-xl-2 d-none d-md-block" role="side">
 
+                <div class="fb-page mb-3" data-href="https://www.facebook.com/fc.feminista/" data-tabs="events" data-small-header="true"
+                    data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+                    <blockquote cite="https://www.facebook.com/fc.feminista/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/fc.feminista/">Flinte</a>
+                    </blockquote>
+                </div>
+            </div>
+
+        </div>
     </div>
-    <footer class="footer">
+
+    <footer class="footer" id="footer">
         <div class="container">
             <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
             </span>
